Changelog for Poi
=================


1.2.8 (unreleased)
------------------

- Nothing changed yet.


1.2.7 (2009-10-24)
------------------

- Some styling changes: adding a few classes and ids, and loading
  Poi.css in the issue search form.  With thanks to Lars Löwenadler
  for some hints here.
  [maurits]

- Added permission 'Poi: Edit response' and protect the edit button of
  responses with that permission.  The creator (Owner) of an issue has
  this permission when the tracker is in the open or restricted state
  and not in the protected or closed state.
  [maurits]

- Do not give Owner the Add Issue/Response permissions in a closed
  tracker.
  [maurits]


1.2.6 (2009-09-06)
------------------

- Added upgrade step to make sure all the tracker manager actually
  have the Manager role.
  [maurits]

- Added tracker workflow state 'protected'.  Basically Readers can
  read, Editors can edit and Contributors can contribute.  Anonymous
  cannot see anything.
  Implements http://plone.org/products/poi/issues/181
  [maurits]

- Issue workflow: acquire permission settings of 'Modify portal
  content' from higher level: when you can edit a tracker you can edit
  its issues as well.
  [maurits]

- Protect the edit button of an issue with the 'Manage portal content'
  permission instead of the non-existing 'Manage Portal Content' with
  capital letters...
  [maurits]

- Fixed bug where a text/html response added using kupu (needs a
  change in config.py) was not accepted.
  Fixes http://plone.org/products/poi/issues/224
  [maurits]

- When creating a tracker as non-manager you used to become only Owner
  and not Manager, which is not what we want.  Fixed this and a few
  other possible errors (like loosing other local roles) in setting
  the managers.
  Fixes http://plone.org/products/poi/issues/218
  [maurits]

- Catch and log SMTPExceptions when sending an email fails.
  Fixes http://plone.org/products/poi/issues/223
  [maurits]
