@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1205</version>
+  <version>1300</version>
   <dependencies>
 <!--
     AddRemoveWidget version 1.5+ needed, uncomment after released
