@@ -4,8 +4,6 @@
     meta_type="Factory-based Type Information with dynamic views"/>
  <object name="PoiPscTracker"
     meta_type="Factory-based Type Information with dynamic views"/>
- <object name="PoiResponse"
-    meta_type="Factory-based Type Information with dynamic views"/>
- <object name="PoiTracker"
+  <object name="PoiTracker"
     meta_type="Factory-based Type Information with dynamic views"/>
 </object>
