@@ -12,9 +12,7 @@
  <property name="immediate_view">base_view</property>
  <property name="global_allow">False</property>
  <property name="filter_content_types">True</property>
- <property name="allowed_content_types">
-  <element value="PoiResponse"/>
- </property>
+ <property name="allowed_content_types" />
  <property name="allow_discussion">False</property>
  <property name="default_view">poi_issue_view</property>
  <property name="view_methods">
