@@ -1,51 +1,0 @@
-<?xml version="1.0"?>
-<object name="PoiResponse"
-   meta_type="Factory-based Type Information with dynamic views"
-   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
- <property name="title">Response</property>
- <property
-    name="description">A response to an issue, added by a project manager. When giving
-      a response, the workflow state of the parent issue can be set at
-      the same time.
-      </property>
- <property name="content_icon">PoiResponse.gif</property>
- <property name="content_meta_type">PoiResponse</property>
- <property name="product">Poi</property>
- <property name="factory">addPoiResponse</property>
- <property name="immediate_view">base_view</property>
- <property name="global_allow">False</property>
- <property name="filter_content_types">False</property>
- <property name="allowed_content_types"/>
- <property name="allow_discussion">False</property>
- <property name="default_view">poi_response_view</property>
- <property name="view_methods">
-  <element value="poi_response_view"/>
- </property>
- <property name="default_view_fallback">False</property>
- <alias from="(Default)" to="(dynamic view)"/>
- <alias from="edit" to="base_edit"/>
- <alias from="properties" to="base_metadata"/>
- <alias from="sharing" to="folder_localrole_form"/>
- <alias from="view" to="(selected layout)"/>
- <action title="view" action_id="view" category="object"
-    condition_expr="python:1" url_expr="string:${object_url}/view"
-    visible="True">
-  <permission value="View"/>
- </action>
- <action title="Edit" action_id="edit" category="object"
-    condition_expr="python:1" url_expr="string:${object_url}/edit"
-    visible="True">
-  <permission value="Modify portal content"/>
- </action>
- <action title="Properties" action_id="metadata" category="object"
-    condition_expr="" url_expr="string:${object_url}/base_metadata"
-    visible="False">
-  <permission value="Modify portal content"/>
- </action>
- <action title="References" action_id="references" category="object"
-    condition_expr="object/archetype_tool/has_graphviz"
-    url_expr="string:${object_url}/reference_graph" visible="True">
-  <permission value="Modify portal content"/>
-  <permission value="Review portal content"/>
- </action>
-</object>
