@@ -1,129 +1,0 @@
-<?xml version="1.0"?>
-<dc-workflow workflow_id="poi_response_workflow"
-             title="Poi response workflow"
-             state_variable="review_state"
-             initial_state="new">
- <permission>Modify portal content</permission>
- <permission>Delete objects</permission>
- <permission>Poi: Modify issue state</permission>
- <permission>Poi: Modify issue severity</permission>
- <permission>Poi: Modify issue assignment</permission>
- <permission>Poi: Modify issue target release</permission>
- <state state_id="new" title="Being created">
-  <exit-transition transition_id="post"/>
-  <permission-map name="Delete objects" acquired="False">
-   <permission-role>Anonymous</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Manager</permission-role>
-  </permission-map>
-  <permission-map name="Modify portal content"
-                  acquired="False">
-   <permission-role>Anonymous</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Manager</permission-role>
-  </permission-map>
-  <permission-map name="Poi: Modify issue assignment"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-  </permission-map>
-  <permission-map name="Poi: Modify issue severity"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-  </permission-map>
-  <permission-map name="Poi: Modify issue state"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-  </permission-map>
-  <permission-map name="Poi: Modify issue target release"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-  </permission-map>
- </state>
- <state state_id="published" title="Posted">
-  <permission-map name="Delete objects" acquired="False">
-   <permission-role>Manager</permission-role>
-  </permission-map>
-  <permission-map name="Modify portal content"
-                  acquired="False">
-   <permission-role>Manager</permission-role>
-  </permission-map>
-  <permission-map name="Poi: Modify issue assignment"
-                  acquired="False">
-  </permission-map>
-  <permission-map name="Poi: Modify issue severity"
-                  acquired="False">
-  </permission-map>
-  <permission-map name="Poi: Modify issue state"
-                  acquired="False">
-  </permission-map>
-  <permission-map name="Poi: Modify issue target release"
-                  acquired="False">
-  </permission-map>
- </state>
- <transition transition_id="post"
-             title="Post response on save"
-             new_state="published" trigger="USER"
-             before_script=""
-             after_script="sendResponseEmail">
-  <action url="" category="workflow">Post response on save</action>
-  <guard>
-   <guard-expression>here/isValid</guard-expression>
-  </guard>
- </transition>
- <variable variable_id="action" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>The last transition</description>
-  <default>
-
-   <expression>transition/getId|nothing</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="actor" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>The ID of the user who performed the last transition</description>
-  <default>
-
-   <expression>user/getId</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="comments" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>Comments about the last transition</description>
-  <default>
-
-   <expression>python:state_change.kwargs.get('comment', '')</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <variable variable_id="review_history" for_catalog="False"
-           for_status="False" update_always="False">
-  <description>Provides access to workflow history</description>
-  <default>
-
-   <expression>state_change/getHistory</expression>
-  </default>
-  <guard>
-   <guard-permission>Request review</guard-permission>
-   <guard-permission>Review portal content</guard-permission>
-  </guard>
- </variable>
- <variable variable_id="time" for_catalog="False"
-           for_status="True" update_always="True">
-  <description>Time of the last transition</description>
-  <default>
-
-   <expression>state_change/getDateTime</expression>
-  </default>
-  <guard>
-  </guard>
- </variable>
- <script script_id="sendResponseEmail"
-         type="External Method" filename=""
-         module="Poi.poi_response_workflow_scripts"
-         function="sendResponseEmail"/>
-</dc-workflow>
