@@ -1,4 +1,0 @@
-[default]
-title=Poi response
-cache=HTTPCache
-
