@@ -1,56 +1,0 @@
-<html xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="Poi">
-<body>
-
-<metal:block fill-slot="top_slot"
-             tal:define="dummy python:request.set('disable_border',1)" />
-
-<metal:css fill-slot="css_slot">
-      <style type="text/css" media="all"
-        tal:content="string:@import url($portal_url/poi.css);"></style>
-</metal:css>
-
-<div metal:fill-slot="main">
-
-    <h1 i18n:translate="poi_heading_delete_response">Delete Response</h1>
-
-    <p i18n:translate="desc_poi_heading_delete_response">
-        Are you sure you wish to delete this response?
-    </p>
-
-    <metal:showResponse use-macro="here/poi_response_view/macros/response_view"/>
-
-    <form name="delete_form"
-          method="post"
-          tal:attributes="action string:${here/absolute_url}/${template/getId}">
-
-      <input type="hidden" name="form.submitted" value="1" />
-      <input type="hidden" name="ids:list" tal:attributes="value here/getId"/>
-
-      <div class="formControls">
-
-          <input class="destructive"
-                 tabindex=""
-                 type="submit"
-                 value="Delete"
-                 name="form.button.Delete"
-                 i18n:attributes="value"
-                 tal:attributes="tabindex tabindex/next;" />
-           <input class="standalone"
-                 tabindex=""
-                 type="submit"
-                 value="Cancel"
-                 name="form.button.Cancel"
-                 i18n:attributes="value"
-                 tal:attributes="tabindex tabindex/next;" />
-
-      </div>
-
-    </form>
-
-</div>
-
-</body>
-</html>
