@@ -1,10 +1,0 @@
-[default]
-title=Delete response
-
-[security]
-View=0:Authenticated
-
-[actions]
-action.success..Delete=traverse_to:string:poi_response_delete
-action.success..Cancel=redirect_to:string:../
-action.success=redirect_to:string:../
