@@ -1,52 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US"
-      lang="en-US"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="Poi">
-
-  <head>
-    <metal:css fill-slot="css_slot">
-      <style type="text/css" media="all"
-        tal:content="string:@import url($portal_url/poi.css);"></style>
-    </metal:css>
-  </head>
-
-<body>
-<div metal:fill-slot="main">
-
-    <div metal:define-macro="body">
-
-      <h1 class="documentFirstHeading" i18n:translate="poi_response_title">
-        Response #<span i18n:name="responseNumber" tal:content="here/getId"/> to "<span i18n:name="issueTitle" tal:content="here/aq_parent/Title"/>"
-      </h1>
-
-      <a href=""
-          class="link-parent visualNoPrint"
-          tal:define="parent_url python:here.navigationParent(here, template.getId())"
-          tal:attributes="href parent_url">
-          <span i18n:translate="poi_up_to_issue">View issue in full</span>
-      </a>
-
-      <tal:comment replace="nothing">
-          Responses by original author use blue border (issue-details class, since
-          it's probably clarification). Responses by someone else get orange border
-          (response-details class, since it's probably a response).
-      </tal:comment>
-
-      <div class="response-details" metal:define-macro="response_view"
-              tal:attributes="class python: test(here.Creator() == here.aq_parent.Creator(),
-                                              'issue-details',
-                                              'response-details')">
-
-          <div tal:content="structure here/getTaggedResponse" />
-
-      </div>
-
-      <div metal:use-macro="here/document_byline/macros/byline">
-        Get the byline - contains details about author and modification date.
-      </div>
-
-  </div>
-</div>
-
-</body>
-</html>
