@@ -1,2 +1,0 @@
-[default]
-title=Default response view
